# freedv-misc

./: .gitignore  CMakeLists.txt  bladerf_config.json  lime_config.json  vhfdv_frame.ods
csrc/: blade_rf_test.c  blade_tdma_test.c  lime_tdma_test.c  pluto_test  pluto_test.c  pluto_test_b1.c  soapy_tdma.c  soapy_tdma.h  tdma_callman.h  tdma_testframer.c  tdma_testframer.h
csrc/freedv-tdma/: fsk.c  fsk.h
julia/: fsk_wrapper.jl  tdma_channel_sim.jl  tdma_testor.jl  tdma_wrapper.jl
pluto_project/: CMakeLists.txt
pluto_project/csrc/: pluto_test.c
